[package]
name = "rsfile"
version = "0.1.0"
edition = "2021"
description = "A Rust library to operate files easily and quickly"
readme = "README.md"
repository = "https://github.com/dhchenx/rsfile/"
documentation = "https://github.com/dhchenx/rsfile/"
license = "MIT"
keywords = ["text-file-helper", "csv-file-helper", "file-utility"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
