[[bin]]
name="rsfile_main"
path="src/main.rs"

[package]
name = "rsfile"
version = "0.1.2"
edition = "2021"
description = "A Rust library to operate files or web pages easily and quickly"
readme = "README.md"
repository = "https://github.com/dhchenx/rsfile/"
documentation = "https://docs.rs/crate/rsfile/latest"
license = "MIT"
keywords = ["text-file-helper", "csv-file-helper", "file-utility","crawler","web-page-helper"]
categories = ["filesystem"]
exclude=[
    "data",
    ".idea",
    "target"
]

[lib]
crate-type=["cdylib","rlib"]
name="rsfile"
path= "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
webpage = "1.4.0"